# PlateListener

./: .gitignore  CMakeLists.txt
client/: LicensePlateListener.h  PlateInfo.cpp  PlateInfo.h  SocketLicensePlateListener.cpp  SocketLicensePlateListener.h  TruckPassDeserializer.cpp  TruckPassDeserializer.h  main.cpp
server/: Server.h  main.cpp
